card tax in  header

--- a/selic.html
+++ b/selic.html
@@ -24,6 +24,9 @@
             <div class="d-flex justify-content-center">
                 <h1>Selic</h1>
             </div>
+            <div class="d-flex justify-content-center ">
+                <p class="card-tax color-gray">5.5%</p>
+            </div>
         </div>
     </div>
 
