--- a/home.html
+++ b/home.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- Font Awesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
@@ -47,9 +47,9 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Investimentos</a>
+                    <!-- <a href="#">Investimentos</a> -->
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false"
-                        class="dropdown-toggle">Pages</a>
+                        class="dropdown-toggle">Investimentos</a>
                     <ul class="collapse list-unstyled" id="pageSubmenu">
                         <a href="selic.html">
                             <li>
@@ -81,7 +81,6 @@
 
         <!-- Page Content Holder -->
         <div id="content">
-
             <nav class="navbar navbar-expand-lg navbar-light bg-dark">
                 <div class="container-fluid">
 
@@ -122,98 +121,105 @@
                     </div>
                 </div>
             </div>
+
             <div class="container">
                 <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-12 mt-3">
-                            <div class="card">
-                                <div class="card-horizontal">
-                                    <div class="img-square-wrapper">
-                                        <img class="" src="http://via.placeholder.com/300x180" alt="Card image cap">
-                                    </div>
-                                    <div class="card-body">
-                                        <h4 class="card-title">Selic</h4>
-                                        <p class="card-text">Para comerçarmos aprender sobre investimentos precisamos
-                                            entender com a taxa Selic.</p>
-                                    </div>
+                    <h1 class="text-center mt-50 ">Taxas</h1>
+                    <div class="row mt-50">
+                        <div class="col-lg-4 col-md-6 mb-4 mt-4">
+                            <!-- Card Narrower -->
+                            <div class="card card-cascade narrower">
+                                <!-- Card image -->
+                                <div class="view view-cascade overlay">
+                                    <img class="card-img-top"
+                                        src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(147).jpg"
+                                        alt="Card image cap">
+                                    <a>
+                                        <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                                    </a>
                                 </div>
-                                <!-- <div class="card-footer">
-                                    <small class="text-muted">Last updated 3 mins ago</small>
-                                </div> -->
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="row">
-                        <div class="col-12 mt-3">
-                            <div class="card">
-                                <div class="card-horizontal">
-                                    <div class="img-square-wrapper">
-                                        <img class="" src="http://via.placeholder.com/300x180" alt="Card image cap">
-                                    </div>
-                                    <div class="card-body">
-                                        <h4 class="card-title">CDI</h4>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
-                                    </div>
+                                <!-- Card content -->
+                                <div class="card-body card-body-cascade">
+                                    <!-- Label -->
+                                    <h5 class="color-blue pb-2 pt-1"><i class="fas fa-percentage"></i> Taxas</h5>
+                                    <!-- Title -->
+                                    <h4 class="font-weight-bold card-title color-gray">Selic</h4>
+                                    <!-- Text -->
+                                    <p class="card-text">Para comerçarmos aprender sobre investimentos precisamos
+                                        entender com a taxa Selic.</p>
+                                    <!-- Button -->
+                                    <button type="button" class="btn btn-dark">Acessar</button>
                                 </div>
-                                <!-- <div class="card-footer">
-                                        <small class="text-muted">Last updated 3 mins ago</small>
-                                    </div> -->
                             </div>
+                            <!-- Card Narrower -->
                         </div>
-                    </div>
+                        <div class="col-lg-4 col-md-6 mb-4  mt-4">
+                            <!-- Card Narrower -->
+                            <div class="card card-cascade narrower">
+                                <!-- Card image -->
+                                <div class="view view-cascade overlay">
+                                    <img class="card-img-top"
+                                        src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(147).jpg"
+                                        alt="Card image cap">
+                                    <a>
+                                        <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                                    </a>
+                                </div>
 
-                    <div class="row">
-                        <div class="col-12 mt-3">
-                            <div class="card">
-                                <div class="card-horizontal">
-                                    <div class="img-square-wrapper">
-                                        <img class="" src="http://via.placeholder.com/300x180" alt="Card image cap">
-                                    </div>
-                                    <div class="card-body">
-                                        <h4 class="card-title">Card title</h4>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
-                                    </div>
+                                <!-- Card content -->
+                                <div class="card-body card-body-cascade">
+                                    <!-- Label -->
+                                    <h5 class="color-blue pb-2 pt-1"><i class="fas fa-percentage"></i> Taxas</h5>
+                                    <!-- Title -->
+                                    <h4 class="font-weight-bold card-title color-gray">CDI</h4>
+                                    <!-- Text -->
+                                    <p class="card-text">Para comerçarmos aprender sobre investimentos precisamos
+                                        entender com a taxa Selic.</p>
+                                    <!-- Button -->
+                                    <button type="button" class="btn btn-dark">Acessar</button>
                                 </div>
-                                <!-- <div class="card-footer">
-                                            <small class="text-muted">Last updated 3 mins ago</small>
-                                        </div> -->
                             </div>
+                            <!-- Card Narrower -->
                         </div>
-                    </div>
+
+                        <div class="col-lg-4 col-md-6 mb-4  mt-4">
+                            <!-- Card Narrower -->
+                            <div class="card card-cascade narrower">
+                                <!-- Card image -->
+                                <div class="view view-cascade overlay">
+                                    <img class="card-img-top"
+                                        src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(147).jpg"
+                                        alt="Card image cap">
+                                    <a>
+                                        <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                                    </a>
+                                </div>
+
+                                <!-- Card content -->
+                                <div class="card-body card-body-cascade">
+                                    <!-- Label -->
+                                    <h5 class="color-blue pb-2 pt-1 "><i class="fas fa-percentage"></i> Taxas</h5>
+                                    <!-- Title -->
+                                    <h4 class="font-weight-bold card-title color-gray">IPCA</h4>
+                                    <!-- Text -->
+                                    <p class="card-text">Para comerçarmos aprender sobre investimentos precisamos
+                                        entender com a taxa Selic.</p>
+                                    <!-- Button -->
+                                    <button type="button" class="btn btn-dark">Acessar</button>
+                                </div>
+                            </div>
+                            <!-- Card Narrower -->
+                        </div>
+
+
+
+                    </div> <!-- row -->
+
+
                 </div>
 
-            </div>
-            <!-- <div class="line"></div>
-
-            <h2>Lorem Ipsum Dolor</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.</p>
-
-            <div class="line"></div>
-
-            <h2>Lorem Ipsum Dolor</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.</p>
-
-            <div class="line"></div>
-
-            <h3>Lorem Ipsum Dolor</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.</p>
-        </div>
-    </div> -->
+            </div> <!-- container -->
 
             <!-- jQuery CDN - Slim version (=without AJAX) -->
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -228,12 +234,26 @@
                 integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
                 crossorigin="anonymous"></script>
 
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js"></script>
             <script type="text/javascript">
                 $(document).ready(function () {
                     $('#sidebarCollapse').on('click', function () {
                         $('#sidebar').toggleClass('active');
                         $(this).toggleClass('active');
                     });
+                });
+                var swiper = new Swiper('.blog-slider', {
+                    spaceBetween: 30,
+                    effect: 'fade',
+                    loop: true,
+                    mousewheel: {
+                        invert: false,
+                    },
+                    // autoHeight: true,
+                    pagination: {
+                        el: '.blog-slider__pagination',
+                        clickable: true,
+                    }
                 });
             </script>
 
