--- a/home.html
+++ b/home.html
@@ -53,11 +53,11 @@
                     <ul class="collapse list-unstyled" id="pageSubmenu">
                         <a href="selic.html">
                             <li>
-                                O que é ga Selic?
+                                Renda Fixa
                             </li>
                         </a>
                         <li>
-                            <a href="#">Page 2</a>
+                            <a href="#">Renda Variável</a>
                         </li>
                         <li>
                             <a href="#">Page 3</a>
@@ -68,7 +68,7 @@
                     <a href="#">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#">Contato</a>
                 </li>
             </ul>
 
@@ -89,13 +89,13 @@
                         <span></span>
                         <span></span>
                     </button>
-                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
+                    <!-- <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fas fa-align-justify"></i>
-                    </button>
+                    </button> -->
 
-                    <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                    <!-- <div class="collapse navbar-collapse " id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto ">
                             <li class="nav-item active">
                                 <a class="nav-link text-light" href="#">Page</a>
@@ -110,7 +110,7 @@
                                 <a class="nav-link text-light" href="#">Page</a>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
             </nav>
 
@@ -124,16 +124,14 @@
 
             <div class="container">
                 <div class="container-fluid">
-                    <h1 class="text-center mt-50 ">Taxas</h1>
+                    <h2 class="text-center mt-50 ">Taxas</h2>
                     <div class="row mt-50">
                         <div class="col-lg-4 col-md-6 mb-4 mt-4">
                             <!-- Card Narrower -->
                             <div class="card card-cascade narrower">
                                 <!-- Card image -->
                                 <div class="view view-cascade overlay">
-                                    <img class="card-img-top"
-                                        src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(147).jpg"
-                                        alt="Card image cap">
+                                    <img class="card-img-top" src="img/taxa.png" alt="Card image cap">
                                     <a>
                                         <div class="mask rgba-white-slight waves-effect waves-light"></div>
                                     </a>
@@ -149,7 +147,11 @@
                                     <p class="card-text">Para comerçarmos aprender sobre investimentos precisamos
                                         entender com a taxa Selic.</p>
                                     <!-- Button -->
-                                    <button type="button" class="btn btn-dark">Acessar</button>
+                                    <a href="selic.html">
+                                        <button class="button">
+                                            <span>ACESSAR</span>
+                                        </button>
+                                    </a>
                                 </div>
                             </div>
                             <!-- Card Narrower -->
@@ -159,9 +161,7 @@
                             <div class="card card-cascade narrower">
                                 <!-- Card image -->
                                 <div class="view view-cascade overlay">
-                                    <img class="card-img-top"
-                                        src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(147).jpg"
-                                        alt="Card image cap">
+                                    <img class="card-img-top" src="img/taxa.png" alt="Card image cap">
                                     <a>
                                         <div class="mask rgba-white-slight waves-effect waves-light"></div>
                                     </a>
@@ -177,7 +177,9 @@
                                     <p class="card-text">Para comerçarmos aprender sobre investimentos precisamos
                                         entender com a taxa Selic.</p>
                                     <!-- Button -->
-                                    <button type="button" class="btn btn-dark">Acessar</button>
+                                    <button class="button">
+                                        <span>ACESSAR</span>
+                                    </button>
                                 </div>
                             </div>
                             <!-- Card Narrower -->
@@ -188,14 +190,11 @@
                             <div class="card card-cascade narrower">
                                 <!-- Card image -->
                                 <div class="view view-cascade overlay">
-                                    <img class="card-img-top"
-                                        src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(147).jpg"
-                                        alt="Card image cap">
+                                    <img class="card-img-top" src="img/taxa.png" alt="Card image cap">
                                     <a>
                                         <div class="mask rgba-white-slight waves-effect waves-light"></div>
                                     </a>
                                 </div>
-
                                 <!-- Card content -->
                                 <div class="card-body card-body-cascade">
                                     <!-- Label -->
@@ -206,19 +205,17 @@
                                     <p class="card-text">Para comerçarmos aprender sobre investimentos precisamos
                                         entender com a taxa Selic.</p>
                                     <!-- Button -->
-                                    <button type="button" class="btn btn-dark">Acessar</button>
+                                    <a href="selic.html">
+                                        <button class="button">
+                                            <span>ACESSAR</span>
+                                        </button>
+                                    </a>
                                 </div>
                             </div>
                             <!-- Card Narrower -->
                         </div>
-
-
-
                     </div> <!-- row -->
-
-
                 </div>
-
             </div> <!-- container -->
 
             <!-- jQuery CDN - Slim version (=without AJAX) -->
@@ -235,6 +232,7 @@
                 crossorigin="anonymous"></script>
 
             <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js"></script>
+
             <script type="text/javascript">
                 $(document).ready(function () {
                     $('#sidebarCollapse').on('click', function () {
