--- a/selic.html
+++ b/selic.html
@@ -21,7 +21,7 @@
 <body>
     <div class="container-fluid padding-0">
         <div class="header">
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-center text-light">
                 <h1>Selic</h1>
             </div>
             <div class="d-flex justify-content-center ">
@@ -31,7 +31,6 @@
     </div>
 
     <div class="container-fluid padding-0">
-
         <div class="content-article">
             <div class="container">
                 <div class="d-flex justify-content-between bd-highlight mb-3">
@@ -39,12 +38,14 @@
                         <h2 class="d-flex  justify-content-start color-gray pt-4">O que é a Selic?</h2>
                     </div>
                     <div>
-                     <a href="home.html"> <h2 class="d-flex justify-content-end align-right color-gray pt-4">X</h2></a>  
+                        <a href="home.html">
+                            <h2 class="d-flex justify-content-end align-right color-gray pt-4">X</h2>
+                        </a>
                     </div>
 
                 </div>
 
-                
+
                 <p class="pt-4 pb-4">
                     No Brasil, a taxa Selic é a taxa média ajustada dos financiamentos diários apurados no
                     <b>Sistema Especial de Liquidação e de Custódia</b> para títulos federais. Ela é obtida mediante
