--- a/home.html
+++ b/home.html
@@ -115,7 +115,8 @@
             </nav>
 
             <div class="container-fluid padding-0">
-                <div class="header">
+                <div class="header texture-header">
+                    <h6 class="text-center">Bem vindo ao curso de: </h6>
                     <div class="d-flex justify-content-center">
                         <h1>Investimentos</h1>
                     </div>
