--- a/selic.html
+++ b/selic.html
@@ -20,7 +20,7 @@
 
 <body>
     <div class="container-fluid padding-0">
-        <div class="header">
+        <div class="header taxas">
             <div class="d-flex justify-content-center text-light">
                 <h1>Selic</h1>
             </div>
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <div class="container-fluid padding-0">
+    <div class="container padding-0">
         <div class="content-article">
             <div class="container">
                 <div class="d-flex justify-content-between bd-highlight mb-3">
@@ -42,22 +42,21 @@
                             <h2 class="d-flex justify-content-end align-right color-gray pt-4">X</h2>
                         </a>
                     </div>
-
                 </div>
-
-
-                <p class="pt-4 pb-4">
+                <p class="pt-4">
                     No Brasil, a taxa Selic é a taxa média ajustada dos financiamentos diários apurados no
-                    <b>Sistema Especial de Liquidação e de Custódia</b> para títulos federais. Ela é obtida mediante
+                    <b class="color-blue">Sistema Especial de Liquidação e de Custódia</b> para títulos federais. Ela é
+                    obtida mediante
                     o cálculo da taxa média ponderada e ajustada das operações de financiamento por um dia,
                     lastreadas em títulos públicos federais e cursadas no referido sistema ou em câmaras de
-                    compensação e liquidação de ativos, na forma de operações compromissadas.
-
+                    compensação e liquidação de ativos, na forma de operações compromissadas. </p>
+                <p>
                     Como a taxa Selic representa a remuneração das instituições financeiras nas operações com
                     títulos públicos, ela é comumente utilizada como um índice pelo qual as taxas de juros no
                     Brasil se balizam. Ela é um instrumento de política monetária utilizado pelo Copom para
                     controlar os juros no país.
-
+                </p>
+                <p class="pb-4">
                     A taxa apurada no processamento noturno do Selic, que consolida as taxas praticadas durante
                     aquele dia, é conhecida como taxa overnight do Selic, taxa Selic overnight ou taxa Selic
                     over. Embora a taxa seja apurada diariamente, a taxa Selic é usualmente expressa em termos
@@ -67,10 +66,6 @@
 
         </div>
     </div>
-
-
-
-
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
