card principal inserido

--- a/home.html
+++ b/home.html
@@ -126,6 +126,14 @@
             <div class="container">
                 <div class="container-fluid">
                     <h2 class="text-center mt-50 ">Taxas</h2>
+                    <div class="underline"></div>
+                    <div class="card mt-4 p-4">
+                        <h3 class="color-blue">1º passo</h3>
+                        <p>Precisamos entender algumas taxas como <b>Selic</b> e <b> CDI</b> e o índice <b>IPCA</b>
+                            antes de
+                            começarmos a aprender
+                            sobre investimentos.</p>
+                    </div>
                     <div class="row mt-50">
                         <div class="col-lg-4 col-md-6 mb-4 mt-4">
                             <!-- Card Narrower -->
