--- a/home.html
+++ b/home.html
@@ -119,6 +119,12 @@
                     <h6 class="text-center">Bem vindo ao curso de: </h6>
                     <div class="d-flex justify-content-center">
                         <h1>Investimentos</h1>
+                        <div class="icone">
+                            <img class="card-img-top" src="img/icone_site.svg" alt="Card image cap">
+                        </div>
+                        <div class="icone2">
+                            <img class="card-img-top" src="img/icone_site2.svg" alt="Card image cap">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -127,12 +133,20 @@
                 <div class="container-fluid">
                     <h2 class="text-center mt-50 ">Taxas</h2>
                     <div class="underline"></div>
-                    <div class="card mt-4 p-4">
-                        <h3 class="color-blue">1º passo</h3>
-                        <p>Precisamos entender algumas taxas como <b>Selic</b> e <b> CDI</b> e o índice <b>IPCA</b>
-                            antes de
-                            começarmos a aprender
-                            sobre investimentos.</p>
+                    <div class="card mt-4">
+                        <div class="row align-items-center justify-content-center">
+                            <div class="col-3">
+                                <img class="card-img-top" src="img/img-selic.svg" alt="Card image cap">
+                            </div>
+                            <div class="col-9">
+                                <h3 class="color-blue">1º passo</h3>
+                                <p>Precisamos entender algumas taxas como <b>Selic</b> e <b> CDI</b> e o índice
+                                    <b>IPCA</b>
+                                    antes de
+                                    começarmos a aprender
+                                    sobre investimentos.</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="row mt-50">
                         <div class="col-lg-4 col-md-6 mb-4 mt-4">
