--- a/selic.html
+++ b/selic.html
@@ -25,7 +25,7 @@
                 <h1>Selic</h1>
             </div>
             <div class="d-flex justify-content-center ">
-                <p class="card-tax color-gray">5.5%</p>
+                <p class="card-tax "> <b>5.5%</b> </p>
             </div>
         </div>
     </div>
