atualizações da página interna - 03-10-2019

--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
                             <a href="#">O que é a CDI?</a>
                         </li>
                         <li>
-                            <a href="#">Home 3</a>
+                            <a href="#">O que é IPCA</a>
                         </li>
                     </ul>
                 </li>
@@ -129,22 +129,24 @@
                 </div>
             </div>
 
-            <div class="container">
+            <div class="container ">
                 <div class="container-fluid">
                     <h2 class="text-center mt-50 ">Taxas</h2>
                     <div class="underline"></div>
                     <div class="card mt-4">
                         <div class="row align-items-center justify-content-center">
-                            <div class="col-3">
-                                <img class="card-img-top" src="img/img-selic.svg" alt="Card image cap">
+                            <div class="col-md-2 col-sm-12 text-center">
+                                <img class="" src="img/index.coin-flowing-loader.gif" alt="Card image cap">
                             </div>
-                            <div class="col-9">
-                                <h3 class="color-blue">1º passo</h3>
-                                <p>Precisamos entender algumas taxas como <b>Selic</b> e <b> CDI</b> e o índice
-                                    <b>IPCA</b>
-                                    antes de
-                                    começarmos a aprender
-                                    sobre investimentos.</p>
+                            <div class="col-md-10 col-sm-12 mt-3">
+                                <div class="card-body">
+                                    <h3 class="color-blue ">1º passo</h3>
+                                    <p>Precisamos entender algumas taxas como <b>Selic</b> e <b> CDI</b> e o índice
+                                        <b>IPCA</b>
+                                        antes de
+                                        começarmos a aprender
+                                        sobre investimentos.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
