--- a/home.html
+++ b/home.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Investimentos</title>
+    <meta name="theme-color" content="#151a2b">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -116,9 +117,8 @@
 
             <div class="container-fluid padding-0">
                 <div class="header texture-header">
-                    <h6 class="text-center">Bem vindo ao curso de: </h6>
+                    <h6 class="text-center">Bem-vindo ao curso de: </h6>
                     <div class="d-flex justify-content-center ">
-
                         <h1 class="text-center">Investimentos</h1>
                         <div class="icone">
                             <img class="card-img-top" src="img/icone_site.svg" alt="Card image cap">
@@ -136,10 +136,13 @@
                     <div class="underline"></div>
                     <div class="card mt-4">
                         <div class="row align-items-center justify-content-center">
-                            <div class="col-md-2 col-sm-12 text-center">
-                                <img class="" src="img/index.coin-flowing-loader.gif" alt="Card image cap">
+                            <div class=" col-sm-12 col-md-2 text-center img-fluid>
+                                <!-- <img class=" img-fluid" src="img/img-passo1.png" alt="Card image cap"> -->
+                                <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_ihxIYc.json"
+                                    background="transparent" speed="1" style="width: 100%; height: 100%;" loop autoplay>
+                                </lottie-player>
                             </div>
-                            <div class="col-md-10 col-sm-12 mt-3">
+                            <div class="col-sm-12 col-md-10 ">
                                 <div class="card-body">
                                     <h3 class="color-blue ">1º passo</h3>
                                     <p>Precisamos entender algumas taxas como <b>Selic</b> e <b> CDI</b> e o índice
@@ -260,6 +263,7 @@
                 crossorigin="anonymous"></script>
 
             <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js"></script>
+            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
             <script type="text/javascript">
                 $(document).ready(function () {
