--- a/home.html
+++ b/home.html
@@ -136,13 +136,13 @@
                     <div class="underline"></div>
                     <div class="card mt-4">
                         <div class="row align-items-center justify-content-center">
-                            <div class=" col-sm-12 col-md-2 text-center img-fluid>
+                            <div class=" col-sm-12 col-md-2 text-center img-fluid">
                                 <!-- <img class=" img-fluid" src="img/img-passo1.png" alt="Card image cap"> -->
                                 <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_ihxIYc.json"
                                     background="transparent" speed="1" style="width: 100%; height: 100%;" loop autoplay>
                                 </lottie-player>
                             </div>
-                            <div class="col-sm-12 col-md-10 ">
+                            <div class="col-sm-12 col-md-10">
                                 <div class="card-body">
                                     <h3 class="color-blue ">1º passo</h3>
                                     <p>Precisamos entender algumas taxas como <b>Selic</b> e <b> CDI</b> e o índice
